src/app/Experience/experience.module.css
.main {
    display: flex;
    flex-direction: column;
    background-color: #e6e6e6;
    color: #000000;
    /* z-index: -1; */
    /* background-image: linear-gradient(rgb(198, 196, 196), white); */
    /* align-items: center; */
    /* justify-content: space-between; */
    min-height: auto;
    position: relative;
}

.title {
    top: 5%;
    /* position: absolute; */
    width: 100%;
    text-align: center;
    justify-content: center;
    /* color: rgb(3, 32, 32); */
}

.rightScroll {
    position: absolute;
    min-width: 50px;
    min-height: 50px;
    right: 20px;
    border-radius: 50%;
    background-color: #0000005e;
    color: #ffffff;
    transform: translateY(250px);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.leftScroll {
    position: absolute;
    min-width: 50px;
    min-height: 50px;
    left: 20px;
    right: auto;
    border-radius: 50%;
    background-color: #0000005e;
    color: #ffffff;
    transform: translateY(250px);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.position {
    position: relative;
    scroll-behavior: smooth;
    min-width: 100%;
    min-height: 450px;
    height: fit-content;
    display: flex;
    flex-direction: row;
    align-items: center;
    /* justify-content: space-between; */
    left: 0;
    /* top: 20%; */
    /* position: sticky; */
    overflow-x: auto; /* Add this property to enable horizontal scrolling */
    white-space: nowrap; /* Add this property to prevent line breaks */
     animation-duration: 2s;
}

.positionTag {
    position: relative;
    scroll-behavior: smooth;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 50px; /* Space between boxes */
    margin: 5%;
}

.tagItem {
    flex: 0 1 calc(50% - 50px); /* 50% width minus half of the gap , make first number into */
    min-height: 150px; /* Adjust height as needed */
    min-width: 500px; /* Adjust width as needed */
    max-width: 550px;
    background-color: #e6e6e6; /* Example color */
    border-radius: 50px;
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
    /* Add other styling as needed */
    position: relative; /* Required for aspect ratio trick */
    overflow-y: hidden;
    display: flex;
    flex-direction: row;
}


.tagIcon {
    display: flex;
    align-items: center;
    position: relative;
    max-height: 125px;
    min-height: 125px;
    max-width: 225px;
    min-width: 125px;
    left: 15px;
    top: 15px;
    padding: 5px;
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
    border-radius: 40px;
}

.icon {
    position: absolute;
    /* margin: 10%; */
    height: 200px;
    width: 300px;
    top: 20px;
    /* left: 50px; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    object-fit: contain;
}

.iconFine {
    max-height: 105px;
    max-width: 115px;
    margin: auto;
}

.iconTagFine {
    max-height: 125px;
    max-width: 200px;
    margin: auto;
}

.description:hover .icon {
    transform: scale(1.2);
    transition: 0.5s;
}

.tagItem:hover .tagIcon {
    transform: translateY(-2px);
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.4),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.35);
    transition: 0.3s;
}



.description .icon,
.tagItem .tagIcon {
    transition: 0.3s;
}

.description:not(:hover) .icon,
.tagItem:not(:hover) .tagIcon {
    transform: scale(1);
}


.description {
    text-align: center;
    object-fit: contain;
    /* right: 0; */
    margin: 3.5%;
    min-width: 300px;
    max-width: 600px;
    min-height: 300px;
    max-height: 300px;
    background-color: #e6e6e6;
    color: black;
    /* position: fixed; */
    /* z-index: -1; */
    position: relative;
    border-radius: 50px;
    /* background: transparent; */
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
    transition: min-width 0.5s ease;
}


.expDescription {
    text-align: center;
    object-fit: contain;
    position: absolute;
    /* right: 0; */
    margin: 3.5%;
    min-width: 299px;
    min-height: 300px;
    max-height: 300px;
    overflow-y: scroll;
    top: -21px; /* Adjust as needed */
    left: 280px; /* Adjust as needed */
    background-color: #e6e6e6;
    color: black;
    /* z-index: -1; */
    /* position: fixed; */
    border-radius: 50px;
    /* background: transparent; */
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
    transition: background-color 0.5s ease, min-width 0.5s ease, height 0.5s ease, left 0.5s ease;
}

.smlDescription {
    text-align: center;
    object-fit: contain;
    position: absolute;
    /* right: 0; */
    margin: 3.5%;
    min-width: 40px;
    min-height: 40px;
    max-height: 40px;
    top: 230px; /* Adjust as needed */
    left: 230px; /* Adjust as needed */
    background-color: #0000005e;
    color: black;
    /* z-index: -1; */
    /* position: fixed; */
    border-radius: 50px;
    /* background: transparent; */
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
    transition: background-color 0.5s ease, max-width 0.5s ease, height 0.5s ease, top 1s ease, left 0.5s ease;
    cursor: pointer;
}


.smlDescription:hover {
    background-color: #000000bf;
    transition: background-color 0.5s ease, max-width 0.5s ease, height 0.5s ease, top 1s ease, left 0.5s ease;
}

.textContainer {
    position: absolute;
    top: 220px;
    width: 300px;
    /* left: auto;
    right: auto; */
    /* center this horizontally */
    /* margin-left: 25%; */
    /* margin-right: auto; */
    /* center children horizontally */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.textContainerTag {
    position: relative;
    top: 40px;
    left: 40px;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    word-break: break-word;
}

.textContainer2 {
    margin: 20px;
    white-space: normal;

}

.textContainer3 {
    position: relative;
    color: white;
    font-size: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 40px;
    top: 50%;

}

@media screen and (max-width: 1200px) {
    .tagItem {
        flex: 0 1 calc(50% - 30px);
    }

    .positionTag {
        margin: 5% 0%;
        gap: 30px;
    }

}  

@media screen and (max-width: 750px) { /* Adjust the 600px threshold as needed */
    .tagItem {
      flex-basis: 100%; /* Each item takes full width */
    }

    .positionTag {
        margin: 5% 5%;
    }

  }


@media screen and (max-width: 500px) {
    .tagItem {
        flex-basis: 100%; /* Each item takes full width */
        min-width: 300px;
    }

    .positionTag {
        margin: 5% 2%;
    }

    .textContainerTag {
        max-width: 47vw;

    }

    

}

.endTag {
    position: relative;
    display: flex;
    justify-content: center;
    /* align-items: center; */
    height: 100px;
    width: 100%;
}

.learnMore {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    /* margin: 5%; */
    padding: 30px;
    border-radius: 50px;
    background-color: #e6e6e6;
    color: black;
    width: 275px;
    height: 13px;
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2), -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
    transition: 0.3s;
}

.learnMore:hover {
    /* background-color: #0000001e; */
    background-color: #e7e4e4;
    transform: translateY(-2px);
    box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.4),
        -8px -8px 18px 0 rgba(255, 255, 255, 0.35);
    transition: 0.3s;
}

.socialIcon {
    margin: 3px;
    padding: 2px;
}

/* .description h1 {
    font-size: 2.5rem;
    font-weight: 700;
    margin: 5%; */
    /* position: sticky; */
    /* background-color: blue; */
/* } */
/* 
.description p {
    font-size: 1.5rem;
    font-weight: 500;
    margin: 5%;
    /* position: sticky; */
    /* background-color: blue; */
/*} 
*/

